--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/img1.jpg" class="d-block w-100 carrosel-img" alt="...">
+                    <img src="assets/img/img1.png" class="d-block w-100 carrosel-img" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/img2.jpg" class="d-block w-100 carrosel-img" alt="...">
+                    <img src="assets/img/img2.png" class="d-block w-100 carrosel-img" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/img3.jpg" class="d-block w-100 carrosel-img" alt="...">
+                    <img src="assets/img/img3.png" class="d-block w-100 carrosel-img" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -101,7 +101,7 @@
                             <div class="row">
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher1.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/marie-curie.jpg" class="card-img-top" style="height: 200px;" alt="imagem da Marie Curie">
                                         <div class="card-body">
                                             <h5 class="card-title">Marie Curie</h5>
                                             <p class="card-text">Marie Curie (1867-1934) foi uma física e química
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher2.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/rose-parks.jpg" class="card-img-top" style="height: 200px;" alt="imagem da Rose Parks">
                                         <div class="card-body">
                                             <h5 class="card-title">Rose Parks</h5>
                                             <p class="card-text">Rosa Parks (1913-2005) é conhecida como uma
@@ -130,94 +130,140 @@
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/Malala-Yousafzai.webp" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Malala Yousafzai">
                                         <div class="card-body">
                                             <h5 class="card-title">Malala Yousafzai</h5>
-                                            <p class="card-text">Malala Yousafzai (1997) ganhou destaque como ativista pela educação, especialmente após sobreviver a um atentado e continuar a defender os direitos das meninas à educação. Sua influência se estendeu globalmente, inspirando movimentos e programas de apoio à educação feminina.</p>
+                                            <p class="card-text">Malala Yousafzai (1997) ganhou destaque como ativista
+                                                pela educação, especialmente após sobreviver a um atentado e continuar a
+                                                defender os direitos das meninas à educação. Sua influência se estendeu
+                                                globalmente, inspirando movimentos e programas de apoio à educação
+                                                feminina.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/frida-kahlo.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Frida Kahlo">
                                         <div class="card-body">
                                             <h5 class="card-title">Frida Kahlo</h5>
-                                            <p class="card-text">Frida Kahlo foi uma artista mexicana conhecida por suas obras que exploravam temas como identidade, dor e feminismo. Suas pinturas, incluindo "Auto-retrato com Colar de Espinhos" e "As Duas Fridas", influenciaram profundamente o mundo da arte, introduzindo um estilo único e expressivo.</p>
+                                            <p class="card-text">Frida Kahlo foi uma artista mexicana conhecida por suas
+                                                obras que exploravam temas como identidade, dor e feminismo. Suas
+                                                pinturas, incluindo "Auto-retrato com Colar de Espinhos" e "As Duas
+                                                Fridas", influenciaram profundamente o mundo da arte, introduzindo um
+                                                estilo único e expressivo.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/coco-chanel.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Coco Chanel">
                                         <div class="card-body">
                                             <h5 class="card-title">Coco Chanel</h5>
-                                            <p class="card-text">Coco Chanel foi uma estilista e empresária francesa que popularizou o uso de linhas simples e elegantes na moda, como o "little black dress". Sua influência na indústria da moda foi marcante, quebrando barreiras de gênero e estabelecendo padrões duradouros de elegância.</p>
+                                            <p class="card-text">Coco Chanel foi uma estilista e empresária francesa que
+                                                popularizou o uso de linhas simples e elegantes na moda, como o "little
+                                                black dress". Sua influência na indústria da moda foi marcante,
+                                                quebrando barreiras de gênero e estabelecendo padrões duradouros de
+                                                elegância.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/Amelia-Earhart.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Amelia Amelia Earhart">
                                         <div class="card-body">
                                             <h5 class="card-title">Amelia Earhart</h5>
-                                            <p class="card-text">Amelia Earhart foi uma aviadora americana pioneira, sendo a primeira mulher a voar sozinha sobre o Oceano Atlântico. Sua conquista inspirou mulheres a perseguir carreiras na aviação e em campos relacionados, contribuindo significativamente para o avanço das mulheres neste campo.</p>
+                                            <p class="card-text">Amelia Earhart foi uma aviadora americana pioneira,
+                                                sendo a primeira mulher a voar sozinha sobre o Oceano Atlântico. Sua
+                                                conquista inspirou mulheres a perseguir carreiras na aviação e em campos
+                                                relacionados, contribuindo significativamente para o avanço das mulheres
+                                                neste campo.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/Jane-Austen.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Jane Austen">
                                         <div class="card-body">
                                             <h5 class="card-title">Jane Austen</h5>
-                                            <p class="card-text">Jane Austen foi uma escritora britânica conhecida por obras como "Orgulho e Preconceito" e "Razão e Sensibilidade", que exploravam temas sociais e românticos com personagens memoráveis. Sua influência na literatura se estende até os dias atuais.</p>
+                                            <p class="card-text">Jane Austen foi uma escritora britânica conhecida por
+                                                obras como "Orgulho e Preconceito" e "Razão e Sensibilidade", que
+                                                exploravam temas sociais e românticos com personagens memoráveis. Sua
+                                                influência na literatura se estende até os dias atuais.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/Wangari-Maathai.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Wangari Maathai">
                                         <div class="card-body">
                                             <h5 class="card-title">Wangari Maathai</h5>
-                                            <p class="card-text">Wangari Maathai foi uma ambientalista queniana que liderou o movimento do Cinturão Verde e recebeu o Prêmio Nobel da Paz. Sua influência no movimento ambientalista se deu através da inspiração para ações de reflorestamento e conscientização sobre questões ambientais.</p>
+                                            <p class="card-text">Wangari Maathai foi uma ambientalista queniana que
+                                                liderou o movimento do Cinturão Verde e recebeu o Prêmio Nobel da Paz.
+                                                Sua influência no movimento ambientalista se deu através da inspiração
+                                                para ações de reflorestamento e conscientização sobre questões
+                                                ambientais.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/Indira-Gandhi.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Indira Gandhi">
                                         <div class="card-body">
                                             <h5 class="card-title">Indira Gandhi</h5>
-                                            <p class="card-text">Indira Gandhi serviu como primeira-ministra da Índia, implementando políticas sociais e econômicas significativas. Sua influência na política indiana foi marcante, desempenhando um papel crucial em reformas que moldaram o país.
+                                            <p class="card-text">Indira Gandhi serviu como primeira-ministra da Índia,
+                                                implementando políticas sociais e econômicas significativas. Sua
+                                                influência na política indiana foi marcante, desempenhando um papel
+                                                crucial em reformas que moldaram o país.
                                             </p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/ada-lovance.jpg" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Ada Ada Lovance">
                                         <div class="card-body">
                                             <h5 class="card-title">Ada Lovelace</h5>
-                                            <p class="card-text">Ada Lovelace foi uma matemática britânica que escreveu o primeiro programa de computador e previu o potencial dos computadores além de cálculos matemáticos. Sua influência no campo da computação estabeleceu os fundamentos da programação de computadores.
+                                            <p class="card-text">Ada Lovelace foi uma matemática britânica que escreveu
+                                                o primeiro programa de computador e previu o potencial dos computadores
+                                                além de cálculos matemáticos. Sua influência no campo da computação
+                                                estabeleceu os fundamentos da programação de computadores.
                                             </p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/Simone-de-Beauvoir.webp" class="card-img-top"
+                                            style="height: 200px;" alt="imagem da Simone de Beauvoir">
                                         <div class="card-body">
-                                            <h5 class="card-title">Wangari Maathai</h5>
-                                            <p class="card-text">Simone de Beauvoir foi uma filósofa e escritora francesa conhecida por desafiar as normas sociais e de gênero, contribuindo para o desenvolvimento do existencialismo e do feminismo. Suas obras, como "A Segunda Sexa" e "Memórias de uma Moça Bem-Comportada", influenciaram profundamente a filosofia e a literatura.
+                                            <h5 class="card-title">Simone de Beauvoir</h5>
+                                            <p class="card-text">Simone de Beauvoir foi uma filósofa e escritora
+                                                francesa conhecida por desafiar as normas sociais e de gênero,
+                                                contribuindo para o desenvolvimento do existencialismo e do feminismo.
+                                                Suas obras, como "A Segunda Sexa" e "Memórias de uma Moça
+                                                Bem-Comportada", influenciaram profundamente a filosofia e a literatura.
                                             </p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="card h-100">
-                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <img src="assets/img/valentina_tereshkova.webp" class="card-img-top" style="height: 200px;" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Valentina Tereshkova</h5>
-                                            <p class="card-text">Valentina Tereshkova foi a primeira mulher a viajar para o espaço, a bordo da missão Vostok 6. Sua influência na exploração espacial se deu ao inspirar mulheres a seguir carreiras neste campo e contribuir para o avanço da igualdade de gênero na exploração espacial.</p>
+                                            <p class="card-text">Valentina Tereshkova foi a primeira mulher a viajar
+                                                para o espaço, a bordo da missão Vostok 6. Sua influência na exploração
+                                                espacial se deu ao inspirar mulheres a seguir carreiras neste campo e
+                                                contribuir para o avanço da igualdade de gênero na exploração espacial.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
